# moove

./: .gitignore  LICENSE  README.md  pyproject.toml
moove/: app_state.py  moove_config.ini.example  moovegui.py  moovetaf.py
moove/example_data/bird_x/experiment_a/day_1/: batch_keep.txt  bout_1.rec  bout_1.wav.not.mat
moove/models/: CNN.py  ConvMLP.py  __init__.py
moove/templates/: recfile_template.jinja
moove/utils/: __init__.py  audio_utils.py  clustering_utils.py  dash_utils.py  file_utils.py  gui_utils.py  label_utils.py  movefuncs_utils.py  plot_utils.py  segment_utils.py  syllable_utils.py  training_utils.py  window_utils.py
