[project]
name = "moove"
version = "1.0.0"
description = "A tool for real-time syllable segmentation and classification of birdsong, designed to enable closed-loop experiments in vocal learning research."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nils Riekers"},
    {name = "Franziska Heubach"},
    {name = "Jacqueline Goebl"},
    {name = "Lena Veit"}
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "matplotlib>=3.9.0",
    "torch>=2.0.0,<=2.5.0",
    "evfuncs>=0.3.5.post1",
    "numpy>=1.26.4",
    "sounddevice>=0.5.0",
    "rangeslider>=2023.7.2",
    "pyaudio>=0.2.14",
    "jinja2>=3.1.4",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.1",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.6",
    "dash>=2.17.1",
    "ttkbootstrap>=1.10.1",
    "ttkwidgets>=0.13.0",
    "pillow>=10.0.0",
]

[project.scripts]
moovegui = "moove.moovegui:main"
moovetaf = "moove.moovetaf:main"

[tool.poetry]
# Include all relevant data und folders
include = [
    "moove/templates/**/*",
    "moove/example_data/**/*.wav",
    "moove/example_data/**/*.mat",
    "moove/example_data/**/*.rec",
    "moove/example_data/**/batch_keep.txt",
]

packages = [
    { include = "moove" },
]

[tool.poetry.group.dev.dependencies]
adjusttext = "^1.2.0"
prefixspan = "^0.5.2"
statsmodels = "^0.14.3"
tensorflow = "^2.17.0"
keras = "^3.6.0"
visualkeras = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
